<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
                 android:layout_height="186dp">
        <TableRow>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:text="@string/first_name"
                    android:textStyle="bold"/>

            <EditText android:id="@+id/first_name"
                      android:layout_height="wrap_content"
                      android:layout_width="200px"
                      android:clickable="true"
                      android:singleLine="true"
                    />
        </TableRow>

        <TableRow>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:text="@string/email_address"
                    android:textStyle="bold"/>

            <EditText android:id="@+id/email_address"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:clickable="true"
                      android:singleLine="true"
                    />
        </TableRow>

        <TableRow>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:text="@string/password"
                    android:textStyle="bold"/>
            <EditText android:id="@+id/pw"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:clickable="true"
                      android:singleLine="true"
                      android:password="true"
                    />
        </TableRow>

        <TableRow>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:text="@string/password_confirm"
                    android:textStyle="bold"/>
            <EditText android:id="@+id/pw_confirm"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:clickable="true"
                      android:singleLine="true"
                      android:password="true"
                    />
        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

        </TableRow>

    </TableLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal" android:layout_width="fill_parent"
                  android:layout_height="fill_parent">

        <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ok2_button"
                android:longClickable="true"/>

        <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>