<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation ="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_user"
            android:id="@id/textView_user"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:gravity="bottom"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/textView_user"
            android:id="@id/txt_user"
            android:layout_alignBottom="@id/textView_user"
            android:layout_alignParentLeft="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:inputType="text"
            android:hint="Introdueix el teu usuari"
            android:gravity="bottom"
            />

    <TextView
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_pass"
            android:id="@id/textView_pass"
            android:layout_below="@id/textView_user"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:layout_alignParentTop="false"
            android:gravity="bottom"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@id/txt_pass"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/textView_pass"
            android:inputType="textPassword"
            android:layout_alignBottom="@id/textView_pass"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:hint="Introdueix la teva contrassenya"
            android:layout_alignParentBottom="false"
            android:gravity="bottom"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ok_button"
            android:id="@id/btnOk"
            android:layout_below="@id/txt_pass"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="15dp"
            android:minWidth="100dp"
            android:paddingLeft="5pt"
            android:paddingRight="5pt"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel_button"
            android:id="@id/btnCancel"
            android:layout_alignTop="@id/btnOk"
            android:layout_toRightOf="@id/btnOk"
            android:minWidth="90dp"
            android:paddingLeft="5pt"
            android:paddingRight="5pt"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SignUp_button"
            android:id="@id/btnNewUser"
            android:minWidth="100dp"
            android:paddingLeft="5pt"
            android:paddingRight="5pt"
            android:layout_alignTop="@id/btnOk"
            android:layout_alignRight="@id/btnCancel"
            android:layout_alignParentRight="true"/>
</RelativeLayout>