<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:text="@string/newlist_name"
            android:id="@+id/tv_NewListName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            />

    <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:text="@string/newlist_date"
            android:id="@+id/tv_NewListDate"
            android:layout_alignLeft="@+id/tv_NewListName"
            android:layout_below="@+id/tv_NewListName"/>

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtnewlist_name"
            android:layout_alignTop="@+id/tv_NewListName"
            android:layout_alignBottom="@+id/tv_NewListName"
            android:layout_toRightOf="@+id/tv_NewListName"/>

    <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:text="Lloc"
            android:id="@+id/newlist_place"
            android:layout_alignLeft="@+id/tv_NewListName"
            android:layout_below="@+id/tv_NewListTime"/>

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtnewlist_place"
            android:layout_below="@+id/tv_NewListDate"
            android:layout_alignBottom="@+id/newlist_place"
            android:layout_toRightOf="@+id/tv_NewListName"
            android:layout_alignTop="@+id/newlist_place"/>

    <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Crear"
            android:id="@+id/btnnewlist_ok"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="35dp"
            android:layout_below="@+id/newlist_place"/>

    <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Cancelar"
            android:id="@+id/btnnewlist_cancel"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="170dp"
            android:layout_below="@+id/newlist_place"
            android:layout_alignBottom="@+id/btnnewlist_ok"/>

    <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:text="@string/newlist_time"
            android:id="@+id/tv_NewListTime"
            android:layout_alignLeft="@+id/tv_NewListName"
            android:layout_below="@+id/tv_NewListDate"/>

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtnewlist_time"
            android:editable="false"
            android:layout_toRightOf="@+id/tv_NewListName"
            android:layout_above="@+id/newlist_place"
            android:layout_below="@+id/tv_NewListDate"
            android:onClick="showTimePickerDialog"
            android:clickable="true"
            android:autoText="false"
            android:text="Escollir hora"/>

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtnewlist_date"
            android:editable="false"
            android:onClick="showDatePickerDialog"
            android:clickable="true"
            android:autoText="false"
            android:text="Escollir dia de la setmana"
            android:layout_toRightOf="@+id/tv_NewListName"
            android:layout_below="@+id/tv_NewListName"/>

</RelativeLayout>